fix: broken style

--- a/packages/components/card/src/index.css
+++ b/packages/components/card/src/index.css
@@ -15,7 +15,7 @@
 }
 
 .ginga-card-title {
-  font-size: 10.5rem;
+  font-size: 1.5rem;
   font-weight: 800;
 }
 
