--- a/packages/components/heading/src/index.css
+++ b/packages/components/heading/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .ginga-heading-level-2 {
-  font-size: 10.5rem;
+  font-size: 1.5rem;
 }
 
 .ginga-heading-level-3 {
