--- a/packages/components/radio/src/index.css
+++ b/packages/components/radio/src/index.css
@@ -9,14 +9,14 @@
   &::before {
     box-sizing: border-box;
     display: block;
-    width: 10.2rem;
-    height: 10.2rem;
+    width: 1.2rem;
+    height: 1.2rem;
     cursor: pointer;
     content: "";
     background: var(--color-background);
-    border: .ginga-143rem solid var(--color-primary-9);
+    border: 0.143rem solid var(--color-primary-9);
     border-radius: 50%;
-    transition: all 200ms;
+    transition: all 0.2s;
   }
 
   &[data-pressed]::before {
