--- a/packages/components/select/src/index.css
+++ b/packages/components/select/src/index.css
@@ -31,7 +31,7 @@
   gap: 0.5rem;
   align-items: center;
   justify-content: space-between;
-  min-height: 20.5rem;
+  min-height: 2.5rem;
   padding: 0.5rem 0.75rem;
   font-family: var(--font-family);
   font-size: 0.875rem;
